# article-navigator

./: README.md
api/: Dockerfile  README.md  api.yml  app.py  articles.pkl  articles.yml  entrypoint.sh  pyproject.toml  supermarket_article_sections.yml
api/api/: supermarket.py  validators.py
api/notebooks/: generate_supermarket_article_sections.py  generate_supermarkets.py
app/: app.py  app.yml  pyproject.toml
app/data/: articles.yaml  data_generator.py  generator.py
