[tool.poetry]
name = "easy-way-api"
version = "0.1.0"
description = "Finding the easy way through the supermarket."
authors = [
    "janjagusch <jan.jagusch@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
connexion = {version = "^2.5", extras = ["swagger-ui"]}
gevent = "^20.9.0"
networkx = "^2.5"
nx-concorde = { git = "https://github.com/janjagusch/nx-concorde.git", tag="0.2.0"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
