[tool.poetry]
name = "easy-way-api"
version = "0.1.0"
description = "Finding the easy way through the supermarket."
authors = [
    "janjagusch <jan.jagusch@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
connexion = "^2.7.0"
gevent = "^20.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
